--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @import url("https://fonts.googleapis.com/css2?family=DotGothic16&display=swap");
 
 h1 {
@@ -5,5 +6,12 @@ h1 {
 }
 
 h3 {
+  font-family: "DotGothic16", sans-serif;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   font-family: "DotGothic16", sans-serif;
 }
