--- a/pokeDex.css
+++ b/pokeDex.css
@@ -11,8 +11,29 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 100px;
   border: 3px solid;
-  border-color: gray;
+  border-color: black;
+  margin-left: 842px;
+  margin-top: 99px;
+  background-color: #c4c4c4;
+  overflow: hidden;
+}
+
+header {
+  background-color: black;
+  min-height: 15vh;
+}
+
+footer {
+  margin-top: 133px;
+  background-color: black;
+  min-height: 15vh;
+}
+
+body {
+  background-image: url(https://www.xmple.com/wallpaper/graph-paper-grid-red-black-1920x1080-c2-8b0000-000000-l2-2-92-a-0-f-20.svg);
+  background-size: 100%;
 }
 
 form {
