--- a/pokeDex.css
+++ b/pokeDex.css
@@ -10,14 +10,13 @@
   font-family: "DotGothic16", sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 100px;
+  align-items: flex-start;
+  gap: 150px;
   border: 3px solid;
   border-color: black;
-  margin-left: 842px;
-  margin-top: 99px;
   background-color: #c4c4c4;
-  overflow: hidden;
+  grid-column: 2;
+  margin: 25px;
 }
 
 header {
@@ -26,16 +25,28 @@ header {
 }
 
 footer {
-  margin-top: 133px;
   background-color: black;
   min-height: 15vh;
 }
 
 body {
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr;
+  width: 100vw;
+  height: 100vh;
   background-image: url(https://www.xmple.com/wallpaper/graph-paper-grid-red-black-1920x1080-c2-8b0000-000000-l2-2-92-a-0-f-20.svg);
   background-size: 100%;
 }
 
-form {
+footer h1 {
+  color: white;
+  display: flex;
   font-family: "DotGothic16", sans-serif;
+  padding-top: 10px;
+  padding-left: 20px;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
