--- a/style.css
+++ b/style.css
@@ -1,17 +1,91 @@
-
 @import url("https://fonts.googleapis.com/css2?family=DotGothic16&display=swap");
-
-h1 {
-  font-family: "DotGothic16", sans-serif;
-}
-
-h3 {
-  font-family: "DotGothic16", sans-serif;
-}
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+.info {
   font-family: "DotGothic16", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 150px;
+  border: 3px solid;
+  border-color: black;
+  background-color: #c4c4c4;
+  grid-column: 2;
+  margin: 25px;
+}
+
+header {
+  background-color: black;
+}
+
+footer {
+  background-color: black;
+}
+
+.gridnet {
+  width: 100%;
+  height: 100%;
+  grid-column: 1;
+}
+
+body {
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr;
+  width: 100vw;
+  height: 100vh;
+  background-color: blue;
+  background-size: 100%;
+}
+
+footer h1 {
+  color: white;
+  display: flex;
+  font-family: "DotGothic16", sans-serif;
+  padding-top: 10px;
+  padding-left: 20px;
+}
+
+.gridmain {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.welcome {
+  display: flex;
+  justify-content: center;
+  font-family: "DotGothic16", sans-serif;
+  color: white;
+  text-align: center;
+  font-size: 150%;
+}
+
+.button0 a {
+  display: flex;
+  font-size: 60px;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "DotGothic16", sans-serif;
+}
+
+.button1 a {
+  display: flex;
+  justify-content: left;
+  margin-left: 25px;
+  font-size: 50px;
+  text-decoration: none;
+  color: white;
+  font-family: "DotGothic16", sans-serif;
+}
+
+.homemain {
+  font-size: 120%;
+  max-width: 50%;
+  margin: auto;
 }
