--- a/style.css
+++ b/style.css
@@ -11,12 +11,16 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 150px;
+  gap: 100;
   border: 3px solid;
   border-color: black;
   background-color: #c4c4c4;
   grid-column: 2;
   margin: 25px;
+  font-size: 200%;
+  padding-left: 25px;
+  height: 12em;
+  justify-content: space-around;
 }
 
 header {
@@ -27,11 +31,6 @@ footer {
   background-color: black;
 }
 
-.gridnet {
-  width: 100%;
-  height: 100%;
-  grid-column: 1;
-}
 
 body {
   display: grid;
@@ -50,9 +49,39 @@ footer h1 {
   padding-left: 20px;
 }
 
-.gridmain {
+form input {
+  border-radius: 8px;
+  border: 2px solid gray;
+  background-color: #c4c4c4;
+  font-family: "DotGothic16", sans-serif;
+  font-size: 21px;
+}
+
+.sprite {
+  margin: auto;
+  grid-column: 1;
+}
+
+.middle {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+.middlemain {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.eevee {
+  grid-column: 1;
+}
+
+.text {
+  grid-column: 2;
+}
+
+.pikachu {
+  grid-column: 3;
 }
 
 .welcome {
@@ -61,7 +90,7 @@ footer h1 {
   font-family: "DotGothic16", sans-serif;
   color: white;
   text-align: center;
-  font-size: 150%;
+  font-size: 135%;
 }
 
 .button0 a {
