small margin change

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ form input {
   font-family: "DotGothic16", sans-serif;
   color: white;
   font-size: 135%;
+  margin-top: 15px;
 }
 
 .button0 a {
